# task1.7_regex

./: CMakeLists.txt  README.md
files_for_test/: test_oneword.txt  test_vowles.txt
my_stat_regex/: CMakeLists.txt  my_stat_regex_library.cpp  my_stat_regex_library.h
my_stat_regex/tests/: CMakeLists.txt  tests.cpp
